--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "lint": "eslint -c .eslintrc --ext .ts src/**/*.ts"
   },
   "prepare": "npm run build",
   "prepublishOnly": "npm test && npm run lint",
@@ -36,11 +36,12 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@types/jest": "^27.0.3",
-    "jest": "^27.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.4.2",
     "prettier": "^2.5.0",
     "ts-jest": "^27.0.7",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
   },
   "files": [
