--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adaptive-throttling",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Adaptive throttling based on the sre-book + rafaelcapucho",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -57,13 +57,12 @@
     "jest": "^27.4.3",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "size-limit": "^7.0.3",
+    "tsdx": "^0.14.1"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "size-limit": "^7.0.3",
-    "tsdx": "^0.14.1"
-  }
+  "dependencies": {}
 }
