--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     // error out if import and file system have a casing mismatch. Recommended by TS
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
-    "noEmit": true
+    "noEmit": true,
+    "target": "ES5"
   },
   "include": ["src", "__tests__/adaptive-throttling.test.ts"],
   "exclude": ["node_modules", "**/__tests__/*"]
